# internal/controller/http_controller/router.go
@@ -25,55 +25,61 @@ func (ctrl *httpController) newRouter() *mux.Router {
 			"AttemptPollIdAttemptIdDelete",
 			http.MethodDelete,
 			"/attempt/{poll_id}/{attempt_id}",
-			ctrl.AttemptPollIdAttemptIdDelete,
+			ctrl.attemptPollIdAttemptIdDelete,
 		},
 		{
 			"AttemptPollIdAttemptIdGet",
 			http.MethodGet,
 			"/attempt/{poll_id}/{attempt_id}",
-			ctrl.AttemptPollIdAttemptIdGet,
+			ctrl.attemptPollIdAttemptIdGet,
+		},
+		{
+			"AttemptPollIdPost",
+			http.MethodPost,
+			"/attempt/{poll_id}",
+			ctrl.attemptPollIdPost,
 		},
 		{
 			"AttemptPollIdDelete",
 			http.MethodDelete,
 			"/attempt/{poll_id}",
-			ctrl.AttemptPollIdDelete,
+			ctrl.attemptPollIdDelete,
 		},
 		{
 			"AttemptPollIdGet",
 			http.MethodGet,
 			"/attempt/{poll_id}",
-			ctrl.AttemptPollIdGet,
+			ctrl.attemptPollIdGet,
 		},
 		{
 			"PruneAttemptsDelete",
 			http.MethodDelete,
 			"/prune_attempts",
-			ctrl.PruneAttemptsDelete,
+			ctrl.pruneAttemptsDelete,
 		},
 		{
 			"PollGet",
 			http.MethodGet,
 			"/poll",
-			ctrl.PollGet,
+			ctrl.pollGet,
 		},
 		{
 			"PollIdDelete",
 			http.MethodDelete,
 			"/poll/{poll_id}",
-			ctrl.PollIdDelete,
+			ctrl.pollIdDelete,
 		},
 		{
 			"PollIdGet",
 			http.MethodGet,
 			"/poll/{poll_id}",
-			ctrl.PollIdGet,
+			ctrl.pollIdGet,
 		},
 		{
 			"PollPost",
 			http.MethodPost,
 			"/poll",
-			ctrl.PollPost,
+			ctrl.pollPost,
 		},
 	}
 
